@@ -1,3 +1,6 @@
+12/07/06 Julien Dutheil
+* Bug fixed in DistanceEstimation constructor.
+
 06/06/06 Julien Dutheil
 * Bug fixed in F84. Substitution matrix is now correct!
 
